Fix requirements for Streamlit Cloud

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,9 @@
-# LLM & Agents
-langchain==0.2.16
-langchain-groq==0.1.9
-langchain-community==0.2.16
-langchain-core==0.2.38
-langgraph==0.2.16
-
-# Streamlit
-streamlit==1.33.0
-pydantic==2.8.2
-python-dotenv==1.0.1
-
-# Web Scraping
-requests==2.31.0
-beautifulsoup4==4.12.3
-lxml==5.1.0
-
-# PDF Processing
-pypdf2==3.0.1
-pdfplumber==0.10.3
-
-# Research APIs
-arxiv==2.1.0
-
-# Data Analysis
-pandas==2.1.4
-
-# Visualization
-matplotlib==3.8.2
-plotly==5.18.0
-
-# NLP
-pygments==2.17.2
+streamlit>=1.30,<2.0
+python-dotenv
+groq
+langchain
+langgraph
+pypdf
+requests
+duckduckgo-search
+beautifulsoup4
