Finalize production requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 streamlit>=1.30,<2.0
 python-dotenv
+
+# LLM / Agents
 groq
 langchain
 langgraph
-pypdf
-pdfplumber
+langchain-groq
+
+# Search & scraping
+arxiv
 requests
 duckduckgo-search
 beautifulsoup4
-arxiv
+
+# PDF processing
+pypdf
+pdfplumber
